# fubuki

./: .gitignore  .markdownlint.json  Cargo.toml  LICENSE.md  Makefile.toml  Procfile  README.md  Trunk.toml  app.yaml  azure-pipelines.yml  build.sh  dprint.json  index.html  index.js  main.sass  main.scss  package.json  pnpm-lock.yaml  rust-toolchain  rustfmt.toml  webpack.config.js
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-merge.yml  build.yml  preview.yml  rust.yml
blog/: Cargo.toml  Makefile.toml
blog/src/: cache.rs  content.rs  fetch_agent.rs  lib.rs  location.rs  main.rs  markdown.rs  navbar.rs  posts.rs  router.rs  update_note.rs  utils.rs  version_check.rs
blog/src/markdown/: custom_tag.rs  mod.rs
blog/static/: about.md  friends.md  index.html  post.json
blog/static/post/: 2016-03-03-Goodbye_demon.md  2018-04-01-ika-ins.md
demon/: Cargo.toml  Makefile.toml
demon/src/: main.rs
demon/static/: about.md  blog.js  blog.wasm
font/iosevka-ss09-2.2.0/: iosevka-ss09-regular.charmap  webfont.css
fubuki/: Cargo.toml
fubuki/src/: cache.rs  content.rs  fetch_agent.rs  lib.rs  loading.rs  logger.rs  main.rs  markdown.rs  navbar.rs  posts.rs  router.rs  style.rs  utils.rs
fubuki/src/content/: style.rs  webmention.rs
fubuki/src/markdown/: mod.rs
fubuki_types/: Cargo.toml
fubuki_types/src/: lib.rs
index_gen/: Cargo.toml
index_gen/src/: atom.rs  date.rs  front_matter.rs  lib.rs  main.rs
post/: 2016-03-03-Goodbye_demon.md  2017-07-02-exec-python.md  2018-03-01-kimi-no-namae.md  2018-04-01-ika-ins.md  2018-04-17-saikinn-leetcode-no-repoto.md  2018-05-05-ticwatch_pro.md  hello-world.md  saikinn-leetcode-no-repoto.md  ticwatch_pro.md
posts_gen/: Cargo.toml
posts_gen/src/: atom.rs  date.rs  front_matter.rs  lib.rs  main.rs
public/: about.md  app.yaml  atom.xml  index.html  index.md  links.md  posts.yml
public/post/: 2016-03-03-Goodbye_demon.md  2017-07-02-exec-python.md  2018-03-01-kimi-no-namae.md  2018-04-01-hello-world.md  2018-04-01-ika-ins.md  2018-04-17-saikinn-leetcode-no-repoto.md  2018-05-05-ticwatch_pro.md  2019-05-05-ticwatch_pro.md  2020-05-12-my-twitter-account-was-banned.md  2020-05-18-card-games.md  2020-12-03-rank-20.md  2020-5-12-my-twitter-account-was-banned.md  2020-5-14-ruina.md  2020-5-18-card-games.md  2021-01-01-happy-new-year.md  2021-02-10-shimakaze.md  2021-02-12-taiho.md  2021-02-21-jagaimo.md  2021-04-02-yukikaze-to-isokaze.md  2021-04-16-shiranui.md  2021-05-09-planswalkers-s-exodus-season-3-round-1-nebula-vs-kc.md  2021-05-22-planswalkers-s-exodus-season-3-2.md  2021-05-23-planswalkers-s-exodus-season-3-3.md  2021-09-28-wicchihanta_no_ka-tigo-ru.md  2022-03-23-schulze.md  test-page.md
scripts/: build.sh  new_post.sh  publish.sh
source/: about.md  friends.md  index.md  links.md  post.json
src/: main.rs
static/: Cargo.7a0b2acb.js  Cargo.7a0b2acb.js.map  Cargo.a57f6ae7.cargo-web-869d7281135b2535a54490b4173096c6  about.md  blog.js  blog.wasm  fubuki-gs.073db583.js  fubuki-gs.073db583.js.map  fubuki-gs.1617343c.css  fubuki-gs.1617343c.css.map  index.html  index.md  post.json
static/post/: 2016-03-03-Goodbye_demon.md  2017-07-02-exec-python.md  2018-03-01-kimi-no-namae.md  2018-04-01-ika-ins.md  hello-world.md
