[package]
name = "blog"
version = "0.4.0"
authors = ["Gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
serde = "1.0.101"
serde_derive = "1.0.101"
stdweb = "0.4.20"
yew = "0.9.1"
pulldown-cmark = { version = "0.6.0", default-features = false }
serde_json = "1.0.41"
log = "0.4.8"
web_logger = "0.2.0"
