[package]
name = "blog"
version = "0.5.5"
authors = ["Gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.103"
stdweb = "0.4.20"
yew = "0.11.0"
pulldown-cmark = { version = "0.6.1", default-features = false }
serde_json = "1.0.44"
log = "0.4.10"
web_logger = "0.2.0"
