[package]
name = "blog"
version = "0.5.7"
authors = ["Gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
stdweb = "0.4.20"
yew = "0.11.0"
serde_json = "1.0.44"
log = "0.4.8"
web_logger = "0.2.0"

[dependencies.pulldown-cmark]
version = "0.6.1"
default-features = false

[dependencies.getrandom]
version = "0.1.14"
features = ["stdweb"]
