[package]
name = "fubuki"
version = "5.0.0"
authors = ["Gyara <me@gyara.moe>"]
edition = "2021"

[dependencies]
fubuki_types = { path = "../fubuki_types" }
gloo-console = "0.2.1"
gloo-net = "0.1.0"
gloo-utils = "0.1.2"
log = "0.4.14"
serde_yaml = "0.8.23"
stylist = { version = "0.10.0", features = ["yew_integration"] }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"

[dependencies.pulldown-cmark]
version = "0.9.1"
default-features = false
