[package]
name = "fubuki"
version = "5.2.0"
authors = ["Gyara <me@gyara.moe>"]
edition = "2021"
license = "MIT"

[dependencies]
fubuki_types = { path = "../fubuki_types" }
gloo-console = "0.2.1"
gloo-net = "0.2.0"
gloo-utils = "0.1.3"
log = "0.4.17"
serde_yaml = "0.9.2"
stylist = { version = "0.10.0", features = ["yew_integration"] }
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"

[dependencies.pulldown-cmark]
version = "0.9.1"
default-features = false
