[package]
name = "fubuki"
version = "5.2.0"
authors = ["Gyara <me@gyara.moe>"]
edition = "2021"
license = "MIT"

[dependencies]
fubuki_types = { path = "../fubuki_types" }
gloo-console = "0.2.3"
gloo-net = "0.2.5"
gloo-utils = "0.1.6"
gloo-worker = { version = "0.1.2", features = ["futures"] }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.16"
stylist = { version = "0.11.0", features = ["yew_integration"] }
yew = { version = "0.20.0", features = ["hydration"] }
yew-agent = "0.2.0"
yew-router = "0.17.0"

[dependencies.pulldown-cmark]
version = "0.9.2"
default-features = false
