[package]
name = "fubuki_types"
version = "0.3.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.120"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0.63"
