[package]
name = "fubuki_types"
version = "4.0.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0.68"
