[package]
name = "index_gen"
version = "4.2.0"
authors = ["Gyara <me@gyara.moe>"]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
atom_syndication = "0.11.0"
base64 = "0.13.0"
blake2 = "0.10.4"
fubuki_types = { path = "../fubuki_types" }
htmlescape = "0.3.1"
serde_derive = "1.0.136"
serde_yaml = "0.8.23"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.pulldown-cmark]
version = "0.9.1"
default-features = false
features = ["simd"]
