[package]
name = "index_gen"
version = "4.2.1"
authors = ["Gyara <me@gyara.moe>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
atom_syndication = "0.11.0"
base64 = "0.13.0"
blake2 = "0.10.4"
fubuki_types = { path = "../fubuki_types" }
htmlescape = "0.3.1"
serde_derive = "1.0.137"
serde_yaml = "0.9.2"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.pulldown-cmark]
version = "0.9.1"
default-features = false
features = ["simd"]
