[package]
name = "posts_gen"
version = "0.3.1"
authors = ["Gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde_yaml = "0.8.9"
pulldown-cmark = { version = "0.5.2", default-features = false, features = ["simd"] }
atom_syndication = "0.6.0"
htmlescape = "0.3.1"
reqwest = { version = "0.9.17", features = ["rustls-tls"] }
