[package]
name = "posts_gen"
version = "0.3.2"
authors = ["Gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
pulldown-cmark = { version = "0.5.3", default-features = false, features = ["simd"] }
atom_syndication = "0.6.0"
htmlescape = "0.3.1"
reqwest = { version = "0.9.19", features = ["rustls-tls"] }
